--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite --port 5173",
         "build": "tsc -b && vite build",
+        "build:client": "npm run build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
