--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "version": "1.0.0",
     "description": "A futuristic cyberpunk-themed real-time messenger",
     "private": true,
+    "workspaces": [
+        "client",
+        "server"
+    ],
     "scripts": {
         "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-        "dev:client": "cd client && npm run dev",
-        "dev:server": "cd server && npm run dev",
-        "build": "cd client && npm run build",
-        "start": "cd server && npm start",
-        "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+        "dev:client": "npm run dev --workspace=nexus-chat-client",
+        "dev:server": "npm run dev --workspace=nexus-chat-server",
+        "build": "npm run build --workspaces",
+        "build:client": "npm run build --workspace=nexus-chat-client",
+        "build:server": "npm run build --workspace=nexus-chat-server",
+        "start": "npm start --workspace=nexus-chat-server",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
         "concurrently": "^8.2.2"
