--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,13 @@
         "socket.io": "^4.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "uuid": "^9.0.1"
-    },
-    "devDependencies": {
+        "uuid": "^9.0.1",
         "@types/express": "^4.17.21",
         "@types/cors": "^2.8.17",
         "@types/node": "^20.11.24",
-        "@types/uuid": "^9.0.8",
+        "@types/uuid": "^9.0.8"
+    },
+    "devDependencies": {
         "tsx": "^4.7.1",
         "typescript": "^5.4.2"
     }
