--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,10 +5,15 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "strict": true,
+        "noImplicitAny": false,
         "skipLibCheck": true,
         "outDir": "./dist",
         "declaration": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "typeRoots": [
+            "./node_modules/@types",
+            "../node_modules/@types"
+        ]
     },
     "include": [
         "src/**/*"
