--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "ESNext",
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "strict": true,
+        "strict": false,
         "noImplicitAny": false,
         "skipLibCheck": true,
         "outDir": "./dist",
@@ -16,7 +16,8 @@
         ]
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "src/declarations.d.ts"
     ],
     "exclude": [
         "node_modules",
