Fix Socket type error

--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,20 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
+        "@types/canvas-confetti": "^1.9.0",
+        "canvas-confetti": "^1.9.4",
+        "clsx": "^2.1.0",
+        "date-fns": "^3.3.1",
+        "dexie": "^4.0.7",
+        "dexie-react-hooks": "^1.1.7",
+        "emoji-mart": "^5.5.2",
+        "framer-motion": "^11.0.8",
+        "lucide-react": "^0.341.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "socket.io-client": "^4.7.4",
-        "dexie": "^4.0.7",
-        "dexie-react-hooks": "^1.1.7",
-        "framer-motion": "^11.0.8",
-        "lucide-react": "^0.341.0",
-        "@emoji-mart/data": "^1.1.2",
-        "@emoji-mart/react": "^1.1.1",
-        "emoji-mart": "^5.5.2",
-        "date-fns": "^3.3.1",
-        "clsx": "^2.1.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
